--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <defaultGoal>clean package</defaultGoal>
 
         <plugins>
-            <!-- coverage and coveralls integration -->
+            <!-- jacoco coverage (execute: mvn clean test jacoco:report) -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -63,10 +63,42 @@
                 </executions>
             </plugin>
 
+            <!-- coverage and coveralls integration -->
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>2.2.0</version>
+            </plugin>
+
+            <!-- javadoc plugin (execute: mvn clean javadoc:javadoc) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <configuration>
+                    <aggregate>true</aggregate>
+                    <show>public</show>
+                    <nohelp>true</nohelp>
+                    <excludePackageNames>org.g_node.sparql.impl.*:org.g_node.sparql.util.*</excludePackageNames>
+                    <header>Fluent SPARQL, ${project.version}</header>
+                    <footer>Fluent SPARQL, ${project.version}</footer>
+                    <doctitle>Fluent SPARQL, ${project.version}</doctitle>
+                </configuration>
+            </plugin>
+
+            <!-- uploading javadoc to gh-pages (execute: mvn clean javadoc:javadoc scm-publish:publish-scm) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-scm-publish-plugin</artifactId>
+                <version>1.1</version>
+                <configuration>
+                    <checkoutDirectory>${project.build.directory}/scmpublish</checkoutDirectory>
+                    <checkinComment>Publishing javadoc for ${project.artifactId}:${project.version}</checkinComment>
+                    <content>${project.reporting.outputDirectory}/apidocs</content>
+                    <skipDeletedFiles>true</skipDeletedFiles>
+                    <pubScmUrl>scm:git:git@github.com:stoewer/fluent-sparql.git</pubScmUrl>
+                    <scmBranch>gh-pages</scmBranch> <!-- branch with static site -->
+                </configuration>
             </plugin>
 
             <!-- compiler plugin config -->
